[package]
name = "acapy-tools"
version = "0.1.0"
edition = "2021"
description = "ACA-Py utility tools"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3.32"
tokio-postgres = { version = "0.7.16", features = ["runtime"] }
tokio-postgres-rustls = "0.13.0"
rustls-pemfile = "2.2.0"
rustls = "0.23.37"
webpki-roots = "1.0.6"
