[package]
name = "acapy-tools"
version = "0.1.0"
edition = "2021"
description = "ACA-Py utility tools"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3.32"
aries-askar = { version = "0.4", default-features = false, features = ["postgres"] }
rustls = "0.23.37"
